--- a/apps/admin/index.html
+++ b/apps/admin/index.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
     <style>
-      body {
+      html,
+      body,
+      #root {
         margin: 0;
         padding: 0;
+        height: 100vh;
+        width: 100vw;
+        overflow: hidden;
+        display: flex;
       }
     </style>
   </head>
-  <body class="p-0 m-0">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
